syntax = "proto3";
package kite.deployments.v1;

message DeploymentSettings {}